BUG#38810 Backup: crash if trigger and event with same name Issue: Server crashes when restoring a backup image of a database        with trigger and event with the same names. Cause: Dependency table is indexed by name.  Hence, trigger is not added when        event with same name has already been inserted. Fix: Add type id to the key for the dependency table.